<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <include layout="@layout/mytooler"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_body_padding"
        android:paddingRight="@dimen/activity_body_padding" >

        <EditText
            android:id="@+id/reg_phone"
            style="@style/loginEditStyle"
            android:hint="@string/tip_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:maxLines="1" >
            <requestFocus />
        </EditText>

        <TextView
            style="@style/loginEditText"
            android:text="@string/title_phone" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/reg_messLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="@dimen/activity_body_padding"
        android:paddingRight="@dimen/activity_body_padding" >

        <TextView
            style="@style/loginEditText"
            android:text="@string/title_checkNumber" />

        <EditText
            android:id="@+id/reg_phonecheck"
            style="@style/loginEditStyle"
            android:hint="@string/tip_checkNum"
            android:inputType="number"
            android:maxLength="8"
            android:maxLines="1" />

        <Button
            android:textColor="@color/white"
            android:id="@+id/reg_sendCheck"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/btn_register_bg"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/getCheckNumber" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/reg_invite_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/activity_body_padding"
        android:paddingRight="@dimen/activity_body_padding" >

        <EditText
            android:id="@+id/reg_invite"
            style="@style/loginEditStyle"
            android:hint="@string/tip_invite"
            android:inputType="number"
            android:maxLength="11"
            android:maxLines="1" >

            <requestFocus />
        </EditText>

        <TextView
            style="@style/loginEditText"
            android:text="@string/title_invite" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/reg_detailLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_body_padding"
        android:paddingRight="@dimen/activity_body_padding"
        android:visibility="visible" >

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <EditText
                android:id="@+id/reg_username"
                style="@style/loginEditStyle"
                android:hint="@string/tip_user_reg"
                android:inputType="text" />

            <TextView
                style="@style/loginEditText"
                android:text="@string/title_username" />
        </RelativeLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@drawable/edittext_login"-->
            <!--android:gravity="center_vertical"-->
            <!--android:paddingEnd="0dp"-->
            <!--android:paddingLeft="0dp"-->
            <!--android:paddingRight="0dp"-->
            <!--android:paddingStart="0dp" >-->

            <!--<TextView-->
                <!--style="@style/loginEditText"-->
                <!--android:text="@string/title_userType" />-->

            <!--<Spinner-->
                <!--android:id="@+id/reg_userType"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="38dp"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@color/white"-->
                <!--android:entries="@array/userType_s"-->
                <!--android:gravity="center_vertical"-->
                <!--android:paddingEnd="0dp"-->
                <!--android:paddingLeft="40dp"-->
                <!--android:paddingRight="0dp"-->
                <!--android:paddingStart="40dp"-->
                <!--android:paddingTop="3dp" />-->
        <!--</LinearLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
               style="@style/loginEditText"
                android:text="@string/title_password" />

            <EditText
                android:id="@+id/reg_pass"
                style="@style/loginEditStyle"
                android:hint="@string/tip_pass"
                android:inputType="textPassword"
                android:maxLines="1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical" >

            <TextView
                style="@style/loginEditText"
                android:text="@string/title_conf_pass" />

            <EditText
                android:id="@+id/reg_passomfirm"
                style="@style/loginEditStyle"
                android:hint="@string/tip_conf_pass"
                android:inputType="textPassword"
                android:maxLines="1" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/reg_confirm"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="@dimen/activity_body_padding"
        android:layout_marginRight="@dimen/activity_body_padding"
        android:layout_marginTop="10dp"
        android:background="@drawable/blue_button"
        android:text="@string/nextStep"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:orientation="horizontal"
        android:gravity="center">
        <CheckBox
            android:id="@+id/box_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="清楚协议内容并同意"
            android:layout_marginLeft="@dimen/dp_2"
            android:textColor="@color/black"
            android:checked="false"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/reg_hasAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/activity_body_padding"
            android:layout_marginRight="@dimen/activity_body_padding"

            android:padding="10dp"
            android:text="@string/reg_hasAccount"
            android:textColor="@color/blue3"
            android:layout_alignParentRight="true"
            android:textSize="16sp" />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray_bg"
        android:scrollbars="none" >
        <LinearLayout
            android:id="@+id/reg_demo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_body_padding"
            android:paddingRight="@dimen/activity_body_padding"
            android:visibility="visible" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_1"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_2"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_3"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_4"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_5"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_6"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_7"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_8"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_9"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_10"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_11"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_12"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_13"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_14"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_15"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_16"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_17"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_18"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_19"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_20"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_21"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_22"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_23"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_24"
                android:textColor="@color/black"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/reg_25"
                android:textColor="@color/black"
                android:textSize="10sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>