<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/dp_25"
    android:paddingTop="@dimen/dp_20"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:alpha="0.5"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/cameraTV"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_public_shape"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/camera"
        android:textSize="15sp" />
    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:layout_below="@+id/cameraTV"
        android:id="@+id/photoTV"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_public_shape"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/photo"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/cancel_tv"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:textColor="@color/black"
        android:layout_below="@+id/photoTV"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@drawable/bg_public_shape"
        android:gravity="center"
        android:text="@string/cancle"
        android:textSize="15sp" />
</RelativeLayout>